tests/paczka2/big_fuzzy/82132819.err
Error in line 21: NdiI S70 -1,9
Error in line 8: NdiI S70 8,7
Error in line 24: NdiI A90 78,0
Error in line 22: LvGTbaBMXB A90 41,7
Error in line 18: bB4GjrIJxG A90 17,7
Error in line 34: NdiI A864 78,9
Error in line 29: NJNwprmiii S70 127,0
Error in line 38: NdiI A666 94,8
Error in line 55: qFXxpHQ5l A90 52,5
Error in line 53: MproNIAONI A90 98,2
Error in line 63: LvGTbaBMXB A90 58,7
Error in line 62: A90 A90 139,9
Error in line 86: NdiI S70 3,7
Error in line 87: NdiI A90 51,8
Error in line 79: NJNwprmiii A666 42,4
Error in line 88: A90 A864 66,6
Error in line 57: qFXxpHQ5l A666 10,7
Error in line 103: NJNwprmiii A864 98,5
Error in line 112: A90 A666 65,5
Error in line 118: A90 A864 66,3
Error in line 120: bB4GjrIJxG A864 10,0
Error in line 122: bB4GjrIJxG A90 3,8
Error in line 126: LvGTbaBMXB A90 0,7
Error in line 133: bB4GjrIJxG A666 2,3
Error in line 138: bB4GjrIJxG A90 19,1
Error in line 146: A90 A666 55,3
Error in line 154: LvGTbaBMXB S70 -4,1
Error in line 157: MproNIAONI A666 80,9
Error in line 153: LvGTbaBMXB S70 97,8
Error in line 159: NJNwprmiii A90 142,0
Error in line 161: LvGTbaBMXB A864 10,9
Error in line 168: MproNIAONI S70 95,9
Error in line 178: LvGTbaBMXB A666 27,6
Error in line 181: NdiI A90 85,9
Error in line 185: A90 A864 98>4
Error in line 187: A90 A864 252,9
Error in line 195: LvGTbaBMXB S70 -1,6
Error in line 182: LvGTbaBMXB S70 35,1
Error in line 186: bB4GjrIJxG A864 10,6
Error in line 208: MproNIAONI S70 31,9
Error in line 205: LvGTbaBMXB A666 67,4
Error in line 206: qFXxpHQ5l A666 95,8
Error in line 217: LvGTbaBMXB S70 61,1
Error in line 232: qFXxpHQ5l A864 47,0
